syntax = "proto3";

package cosmwasm.wasm.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object of the wasm module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import : "github.com/CosmWasm/wasmd/x/wasm"
  };

  string available_capabilities = 1;

  // authority defines the custom module authority. If not set, defaults to the
  // governance module.
  string authority = 2;
}