syntax = "proto3";
package wasmd.x.wasmd.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/CosmWasm/wasmd/x/wasmd/internal/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

enum AccessType {
    option (gogoproto.goproto_enum_prefix) = false;
    option (gogoproto.goproto_enum_stringer) = false;
    ACCESS_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "AccessTypeUnspecified"];
    ACCESS_TYPE_NOBODY = 1 [(gogoproto.enumvalue_customname) = "AccessTypeNobody"];
    ACCESS_TYPE_ONLY_ADDRESS = 2 [(gogoproto.enumvalue_customname) = "AccessTypeOnlyAddress"];
    ACCESS_TYPE_EVERYBODY = 3 [(gogoproto.enumvalue_customname) = "AccessTypeEverybody"];
}

message AccessTypeParam {
    option (gogoproto.goproto_stringer) = true;
    AccessType value = 1 [(gogoproto.moretags) = "yaml:\"value\""];
}

message AccessConfig {
    option (gogoproto.goproto_stringer) = true;
    AccessType permission = 1 [(gogoproto.moretags) = "yaml:\"permission\""];
    bytes address = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress", (gogoproto.moretags) = "yaml:\"address\""];
}

// Params defines the set of wasm parameters.
message Params {
    option (gogoproto.goproto_stringer) = false;
    AccessConfig code_upload_access = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"code_upload_access\""];
    AccessType instantiate_default_permission = 2 [(gogoproto.moretags) = "yaml:\"instantiate_default_permission\""];
    uint64 max_wasm_code_size = 3 [(gogoproto.moretags) = "yaml:\"max_wasm_code_size\""];
}

// CodeInfo is data for the uploaded contract WASM code
message CodeInfo {
    bytes code_hash = 1;
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string source = 3;
    string builder = 4;
    AccessConfig instantiate_config = 5 [(gogoproto.nullable) = false];
}

// ContractInfo stores a WASM contract instance
message ContractInfo {
    uint64 code_id = 1 [(gogoproto.customname) = "CodeID"];
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    bytes admin = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string label = 4;
    // never show this in query results, just use for sorting
    // (Note: when using json tag "-" amino refused to serialize it...)
    AbsoluteTxPosition created = 5;
}

enum ContractCodeHistoryOperationType {
    option (gogoproto.goproto_enum_prefix) = false;
    CONTRACT_CODE_HISTORY_OPERATION_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryOperationTypeUnspecified"];
    CONTRACT_CODE_HISTORY_OPERATION_TYPE_INIT = 1 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryOperationTypeInit"];
    CONTRACT_CODE_HISTORY_OPERATION_TYPE_MIGRATE = 2 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryOperationTypeMigrate"];
    CONTRACT_CODE_HISTORY_OPERATION_TYPE_GENESIS = 3 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryOperationTypeGenesis"];
}

message ContractHistory {
    repeated ContractCodeHistoryEntry code_history_entries = 1 [(gogoproto.nullable) = false];
}

// ContractCodeHistoryEntry stores code updates to a contract.
message ContractCodeHistoryEntry {
    ContractCodeHistoryOperationType operation = 1;
    uint64 code_id = 2 [(gogoproto.customname) = "CodeID"];
    AbsoluteTxPosition updated = 3;
    bytes msg = 4 [(gogoproto.casttype) = "encoding/json.RawMessage"];

}

// AbsoluteTxPosition can be used to sort contracts
message AbsoluteTxPosition {
    // BlockHeight is the block the contract was created at
    int64 block_height = 1;
    // TxIndex is a monotonic counter within the block (actual transaction index, or gas consumed)
    uint64 tx_index = 2;
}

// Model is a struct that holds a KV pair
message Model {
    // hex-encode key to read it better (this is often ascii)
    bytes key = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
    // base64-encode raw value
    bytes value = 2;
}